# pydanpak

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/: cashflows_example.py
pydanpak/: __init__.py  cashflows.py
tests/: test_cashflows.py
