[project]
name = "pydanpak"
version = "0.1.0"

dependencies = [
    "pydantic",
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88 