[project]
name = "pydanpak"
version = "0.1.0"

dependencies = [
    "pydantic",
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "pytest-cov"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
source = ["pydanpak"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "@abstractmethod",
]
fail_under = 80 